load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_binary(
    name = "liblarkin.so",
    deps = [
        "//larkin/core/accessibility:accessibility",
        "//larkin/core/environment:environment",
        "//larkin/core/interaction:interaction",
    ],
    linkshared=True,
    visibility = ["//visibility:public"]
)

cc_binary(
    name = "example",
    deps = [
        "//larkin:core",
    ],
    srcs = [
        "examples/example.cc"
    ],
    visibility = ["//visibility:public"]
)