#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

# Custom ts_library compiler that runs tsc_wrapped with angular/compiler-cli statically linked
# This can be used with worker mode because we don't need the linker at runtime to make
# the angular plugin loadable
nodejs_binary(
    name = "tsc_wrapped_with_angular",
    data = [
        "@npm//@angular/compiler-cli",
        "@npm//@bazel/typescript",
    ],
    entry_point = "@npm//:node_modules/@bazel/typescript/internal/tsc_wrapped/tsc_wrapped.js",
    visibility = ["//visibility:public"],
)

# Various typescript config files for different types of projects
ts_config(
    name = "ts_config_base",
    src = "tsconfig.json",
    deps = [
        "//third_party/node:ts_config_gts",
    ],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "ts_config_chrome_extension",
    src = "tsconfig_chrome.json",
    deps = [
        ":ts_config_base",
    ],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "ts_config_web_app",
    src = "tsconfig_web.json",
    deps = [
        ":ts_config_base",
    ],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "ts_config_node",
    src = "tsconfig_node.json",
    deps = [
        ":ts_config_base",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "tsconfig.json",
    ],
    visibility = ["//visibility:public"]
)
