#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "v11_lib_node",
    srcs = [
        "applications.ts",
        "events.ts",
        "keyboard.ts",
        "sound.ts",
        "system.ts",
        "v11.ts",
    ],
    deps = [
        "//v11/larkin:larkin_lib_node",
    ],
    visibility = ["//visibility:public"],
)
