#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@rules_cc//cc:defs.bzl", "objc_library", "cc_library")

cc_library(
    name = "v11_utils_lib",
    srcs = [
        "string.cc"
    ],
    hdrs = [
        "definitions.h",
        "error.h",
        "string.h"
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

objc_library(
    name = "run_main",
    srcs = [
        "run_main_mac.mm",
    ],
    hdrs = [
        "run_main.h",
    ],
    copts = ["-Ilarkin/core/"],
    visibility = ["//:__subpackages__"],
    sdk_frameworks = [
        "Foundation",
        "AppKit"
    ]
)