#  Copyright 2020 Northwestern Inclusive Technology Lab
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cc_library(
    name = "v11_utils_lib",
    srcs = [
        "string.cc",
    ],
    hdrs = [
        "definitions.h",
        "error.h",
        "string.h",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

cross_cc_library(
    name = "v11_utils_main_loop_lib",
    srcs = [],
    hdrs = [
        "run_main.h",
    ],
    linux_srcs = [
        ":utils_main_loop_lib_linux_srcs",
    ],
    macos_srcs = [
        ":utils_main_loop_lib_macos_srcs",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
    windows_srcs = [
        ":utils_main_loop_lib_windows_srcs",
    ],
)

# Core Main Loop Lib Linux Platform Resources

filegroup(
    name = "utils_main_loop_lib_linux_srcs",
    srcs = [
        "run_main_linux.cc",
    ],
    visibility = ["//visibility:private"],
)

# Core Main Loop Lib MacOS Platform Resources

filegroup(
    name = "utils_main_loop_lib_macos_srcs",
    srcs = [
        "run_main_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core Main Loop Lib Windows Platform Resources

filegroup(
    name = "utils_main_loop_lib_windows_srcs",
    srcs = [
        "run_main_windows.cc",
    ],
    visibility = ["//visibility:private"],
)
