load("@rules_cc//cc:defs.bzl", "objc_library", "cc_library")

cc_library(
    name = "environment",
    srcs = [
        # system/
        "system/system.cc",
    ],
    hdrs = [
        "system/system.h"
    ],
    copts = ["-Ilarkin/core/"],
    deps = select(
        {
            "@bazel_tools//src/conditions:darwin": [":environment_mac"],
            "@bazel_tools//src/conditions:windows": [":environment_windows"]
        },
        no_match_error = "Please build for one of the supported platforms: mac, windows, or linux",
    ) + [":environment_cross_deps"],
    visibility = ["//:__subpackages__"]
)

objc_library(
    name = "environment_mac",
    srcs = [
        "system/platform/get_platform_mac.mm",
        "system/notifications/notification_manager_bridge_mac.mm",
        "system/system_delegate_mac.mm",
        "system/system_bridge_mac.mm"
    ],
    hdrs = [
        "system/system_delegate_mac.h"
    ],
    copts = ["-Ilarkin/core/"],
    deps = [
        ":environment_cross_deps"
    ],
    sdk_frameworks = [
        "Foundation",
        "AppKit"
    ]
)

cc_library(
    name = "environment_windows",
    srcs = [
        "system/platform/get_platform_windows.cc",
        "system/notifications/notification_manager_bridge_windows.cc"
    ],
    strip_include_prefix = "/larkin/core/",
    deps = [
        ":environment_cross_deps"
    ],
    visibility = ["//visibility:private"]
)

cc_library(
    name = "environment_linux",
    srcs = [
        "system/platform/get_platform_linux.cc",
        "system/notifications/notification_manager_bridge_linux.cc"
    ],
    strip_include_prefix = "/larkin/core/",
    deps = [
        ":environment_cross_deps"
    ],
    visibility = ["//visibility:private"]
)

cc_library(
    name = "environment_cross_deps",
    strip_include_prefix = "/larkin/core/",
    copts = ["-Ilarkin/core/"],
    srcs = [
        "system/notifications/notification.cc",
        # system/notifications/
        "system/notifications/notification_manager.cc",
        #system/platform/
        "system/platform/platform.cc",
    ],
    hdrs = [
        "system/system_bridge.h",
        "system/system_initializer.h",

        "system/notifications/listener.h",
        "system/notifications/notification.h",
        "system/notifications/manager_type.h",
        "system/notifications/notification_manager_bridge.h",

        "system/platform/platform_info.h",
        "system/platform/get_platform.h",
        # system/notifications/
        "system/notifications/notification_manager.h",
        #system/platform/
        "system/platform/platform.h"
    ],
    deps = [
        "//larkin/core/utils:utils",
        "//larkin/core/interaction:interaction"
    ],
    visibility = ["//visibility:private"]
)