#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "core_sound_lib",
    hdrs = [
        "sound.h",
        "sound_manager.h",
        "sound_player.h",
    ],
    srcs = [
        "sound.cc",
        "sound_manager.cc",
        "sound_player.cc",
    ],
    deps = [
        "//v11/core/devices/sound/text2speech:sound_text2speech_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)