#  Copyright 2020 Northwestern Inclusive Technology Lab
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cross_cc_library(
    name = "sys_notifications_lib",
    srcs = [
        "notification_utils.cc",
        "system_notification_manager.cc",
    ],
    hdrs = [
        "notification_utils.h",
        "notification_utils_bridge.h",
        "system_notification.h",
        "system_notification_manager.h",
    ],
    macos_hdrs = [
        ":sys_notifications_lib_macos_hdrs",
    ],
    macos_srcs = [
        ":sys_notifications_lib_macos_srcs",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
    #    linux_srcs = [
    #        ":sys_notifications_lib_linux_srcs",
    #    ],
    #    windows_srcs = [
    #        ":sys_notifications_lib_windows_srcs",
    #    ],
    deps = [
        "//v11/core/applications:core_application_lib",
        "//v11/core/notifications:notifications_base_lib",
        "//v11/core/notifications:notifications_input_source_base_lib",
        "//v11/core/notifications:notifications_manager_base_lib",
        "//v11/utils:v11_utils_lib",
    ],
)

# Core System Notifications Lib Linux Platform Resources

filegroup(
    name = "sys_notifications_lib_linux_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib MacOS Platform Resources
filegroup(
    name = "sys_notifications_lib_macos_hdrs",
    srcs = [
        "system_notification_manager_mac.h",
        "workspace_input_source_mac.h",
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "sys_notifications_lib_macos_srcs",
    srcs = [
        "notification_utils_bridge_mac.mm",
        "system_notification_manager_mac.mm",
        "workspace_input_source_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib Windows Platform Resources

filegroup(
    name = "sys_notifications_lib_windows_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)
