#  Copyright 2020 Northwestern Inclusive Technology Lab
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")
load("@rules_cc//cc:defs.bzl", "cc_test")

cross_cc_library(
    name = "sys_platform_lib",
    srcs = [
        "platform.cc",
        "platform_utils.cc",
    ],
    hdrs = [
        "platform.h",
        "platform_info.h",
        "platform_utils.h",
    ],
    linux_hdrs = [
        "platform_linux.h",
    ],
    linux_srcs = [
        "platform_linux.cc",
    ],
    macos_hdrs = [
        "platform_mac.h",
    ],
    macos_srcs = [
        "platform_mac.mm",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil_cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "sys_platform_lib_mock",
    srcs = [
        "platform_mock.cc",
    ],
    hdrs = [
        "platform_mock.h",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:private"],
    deps = [
        ":sys_platform_lib",
    ],
)

cc_test(
    name = "sys_platform_lib_test",
    srcs = [
        "platform_test.cc",
        "platform_utils_test.cc",
    ] + select({
        "//tools/bazel/platforms:linux": [
            "platform_test_linux.cc",
        ],
        "//tools/bazel/platforms:macos": [
            "platform_test_mac.cc",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//v11:__subpackages__"],
    deps = [
        ":sys_platform_lib",
        ":sys_platform_lib_mock",
        "@gtest//:gtest_main",
    ],
)
