#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cross_cc_library(
    name = "larkin_application_lib",
    hdrs = [
        "application.h",
        "application_observer.h",
        "application_observer_bridge.h",
    ],
    srcs = [
        "application.cc",
        "application_observer.cc",
    ],
    macos_srcs = [
        ":application_lib_macos_srcs",
    ],
    linux_srcs = [
        ":application_lib_linux_srcs",
    ],
    windows_srcs = [
        ":application_lib_windows_srcs",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core Application Lib Linux Platform Resources

filegroup(
    name = "application_lib_linux_srcs",
    srcs = [
        "application_observer_bridge_linux.cc",
    ],
    visibility = ["//visibility:private"],
)

# Core Application Lib MacOS Platform Resources

filegroup(
    name = "application_lib_macos_srcs",
    srcs = [
        "application_observer_bridge_mac.mm",
        "application_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core Application Lib Windows Platform Resources

filegroup(
    name = "application_lib_windows_srcs",
    srcs = [
        "application_observer_bridge_windows.cc",
    ],
    visibility = ["//visibility:private"],
)
