#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:objcc.bzl", "cc_objc_library")

cc_objc_library(
    name = "larkin_sys_lib",
    hdrs = [
        "system.h",
        "system_bridge.h",
        "system_initializer.h",
    ],
    srcs = [
        "system.cc",
    ] + select({
        "//tools/bazel/platforms:linux": [
            ":sys_lib_linux_srcs",
        ],
        "//tools/bazel/platforms:macos": [
            ":sys_lib_macos_srcs",
        ],
        "//tools/bazel/platforms:windows": [
            ":sys_lib_windows_srcs",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//v11/utils:v11_utils_lib",
        "//v11/larkin/environment/system/platform:sys_platform_lib",
        "//v11/larkin/environment/system/notifications:sys_notifications_lib",
        "//v11/larkin/interaction/sound:larkin_sound_lib",
        "//v11/larkin/interaction/keyboard:larkin_keyboard_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core System Lib Linux Platform Resources

filegroup(
    name = "sys_lib_linux_srcs",
    srcs = [
        "system_bridge_linux.cc",
    ],
    visibility = ["//visibility:private"],
)

# Core System Lib MacOS Platform Resources

filegroup(
    name = "sys_lib_macos_srcs",
    srcs = [
        "system_bridge_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core System Lib Windows Platform Resources

filegroup(
    name = "sys_lib_windows_srcs",
    srcs = [
        "system_bridge_windows.cc",
    ],
    visibility = ["//visibility:private"],
)
